--- a/index.html
+++ b/index.html
@@ -4,147 +4,155 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
-    <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/styles.css">
   </head>
 
   <body>
-    <header class="page-header" data-test="header">
-      <a class="logo-link">
-        <img class="logo-image" src="./images/logo.svg" width="170" height="70" alt="Логотип сайта Седона">
-      </a>
-      <nav class="navigation">
-        <ul class="navigation-list">
-          <li class="navigation-item">
-            <a class="navigation-link navigation-link-active" href="./index.html" aria-current="page">Главная</a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="#">О Седоне</a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="#">Гостиницы</a>
-          </li>
-        </ul>
-        <ul class="navigation-list user-menu">
-          <li class="user-menu-item">
-            <a class="user-menu-link user-menu-search" href="#">
-              <span class="visually-hidden">Поиск по сайту</span>
-            </a>
-          </li>
-          <li class="user-menu-item user-menu-favorite">
-            <a class="user-menu-link" href="#">
-              <span class="visually-hidden">Понравилось</span>
-              <span class="notification-badge">12</span>
-            </a>
-          </li>
-          <li class="user-menu-item">
-            <a class="button user-menu-button" href="#">Хочу сюда</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
-    <main class="main-index" data-test="main">
-      <h1 class="visually-hidden">Сайт города Седона</h1>
-      <section class="welcome" data-test="hero">
-        <h2 class="visually-hidden">Добро пожаловать в Седону</h2>
-        <img class="welcome-image" width="458" height="352" src="./images/welcome-image.svg"
-          alt="Добро пожаловать в Седону">
-      </section>
-      <section class="advantages" data-test="advantages">
-        <h2 class="advantages-title">Сeдона — небольшой городок в Аризоне, заслуживающий большего!</h2>
-        <p class="advantages-subtitle">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
-        <ul class="advantages-list">
-          <li class="advantages-item advantages-item-dark">
-            <h3 class="advantages-header">Настоящий городок</h3>
-            <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-            <img class="advantages-image" width="800" height="385" src="./images/advantages-city-sedona.jpg"
-              alt="Виды города Седона">
-          </li>
-          <li class="advantages-item advantages-item-light">
-            <h3 class="advantages-header">Небольшая площадь</h3>
-            <p class="advantages-description">Все достопримечательности находятся очень близко</p>
-          </li>
-          <li class="advantages-item advantages-item-medium">
-            <h3 class="advantages-header">Красивая дорога</h3>
-            <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-          </li>
-          <li class="advantages-item advantages-item-light">
-            <h3 class="advantages-header">Мало туристов</h3>
-            <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
-          </li>
-          <li class="advantages-item advantages-item-dark">
-            <img class="advantages-image" width="800" height="385" src="./images/devil-bridge.jpg" alt="Мост дьявола">
-            <h3 class="advantages-header">Там есть мост дьявола</h3>
-            <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-          </li>
-        </ul>
-      </section>
-      <section class="services">
-        <h2 class="services-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
-        <p class="services-subtitle">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
-        <ul class="services-list">
-          <li class="services-item">
-            <h3 class="services-caption">Жильё</h3>
-            <p class="services-text">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-          </li>
-          <li class="services-item">
-            <h3 class="services-caption">Еда</h3>
-            <p class="services-text">Все достопримечательности находятся очень близко</p>
-          </li>
-          <li class="services-item">
-            <h3 class="services-caption">Сувениры</h3>
-            <p class="services-text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-          </li>
-        </ul>
-      </section>
-      <section class="search-hotel" data-test="search">
-        <h2 class="search-title">Заинтересовались?</h3>
-          <p class="search-desription">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц
-            в Седоне</p>
-          <a href="#" class="button search-button">Поиск гостиницы в Cедоне</a>
-      </section>
-    </main>
-    <footer class="page-footer" data-test="footer">
-      <section class="subscribe" data-test="subscribe">
-        <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
-        <p class="subscribe-subtitle">Только полезная информация и никакого спама, честное бойскаутское!</p>
-        <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
-          <p class="subscribe-form-name">
+    <div class="page-container">
+      <header class="page-header" data-test="header">
+        <nav class="navigation">
+          <a href="./index.html" aria-current="page" class="logo-link">
+            <img class="logo-image" src="./images/logo.svg" width="140" height="70" alt="Логотип сайта Седона">
+          </a>
+          <ul class="navigation-list">
+            <li class="navigation-item">
+              <a class="navigation-link navigation-link-active" href="./index.html" aria-current="page">Главная</a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link" href="#">О Седоне</a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link" href="catalog.html">Гостиницы</a>
+            </li>
+          </ul>
+          <ul class="user-menu">
+            <li class="user-menu-item">
+              <a class="user-menu-link user-menu-search" href="#">
+                <span class="visually-hidden">Поиск по сайту</span>
+              </a>
+            </li>
+            <li class="user-menu-item user-menu-favorite">
+              <a class="user-menu-link" href="#">
+                <span class="visually-hidden">Понравилось</span>
+                <span class="notification-badge">12</span>
+              </a>
+            </li>
+            <li class="user-menu-item">
+              <a class="button user-menu-button" href="#">Хочу сюда</a>
+            </li>
+          </ul>
+        </nav>
+      </header>
+      <main class="main-container main-index" data-test="main">
+        <h1 class="visually-hidden">Сайт города Седона</h1>
+        <section class="welcome" data-test="hero">
+          <h2 class="visually-hidden">Добро пожаловать в Седону</h2>
+          <img class="welcome-image" width="458" height="352" src="./images/welcome-image.svg"
+            alt="Добро пожаловать в Седону">
+        </section>
+        <section class="advantages" data-test="advantages">
+          <h2 class="advantages-title">Сeдона — небольшой городок в Аризоне, заслуживающий большего!</h2>
+          <p class="advantages-subtitle">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+          <ul class="advantages-list">
+            <li class="advantages-item advantages-item-dark">
+              <div class="advantages-container">
+                <h3 class="advantages-header">Настоящий городок</h3>
+                <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+              </div>
+              <img class="advantages-image" width="800" height="385" src="./images/advantages-city-sedona.jpg"
+                alt="Виды города Седона">
+            </li>
+            <li class="advantages-item advantages-item-light">
+              <h3 class="advantages-header">Небольшая площадь</h3>
+              <p class="advantages-description">Все достопримечательности находятся очень близко</p>
+            </li>
+            <li class="advantages-item advantages-item-medium">
+              <h3 class="advantages-header">Красивая дорога</h3>
+              <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            </li>
+            <li class="advantages-item advantages-item-light">
+              <h3 class="advantages-header">Мало туристов</h3>
+              <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
+            </li>
+            <li class="advantages-item advantages-item-dark">
+              <img class="advantages-image" width="800" height="385" src="./images/devil-bridge.jpg" alt="Мост дьявола">
+              <div class="advantages-container">
+                <h3 class="advantages-header">Там есть мост дьявола</h3>
+
+                <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+              </div>
+            </li>
+          </ul>
+        </section>
+        <section class="services">
+          <h2 class="services-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
+          <p class="services-subtitle">Опытный персонал и качественное обслуживание!</p>
+          <ul class="services-list">
+            <li class="services-item">
+              <h3 class="services-caption">Жильё</h3>
+              <p class="services-text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+            </li>
+            <li class="services-item">
+              <h3 class="services-caption">Еда</h3>
+              <p class="services-text">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+            </li>
+            <li class="services-item">
+              <h3 class="services-caption">Сувениры</h3>
+              <p class="services-text">Не только китайского, но и настоящего местного производства!</p>
+            </li>
+          </ul>
+        </section>
+        <section class="search-hotel" data-test="search">
+          <h2 class="search-title">Заинтересовались?</h3>
+            <p class="search-desription">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения
+              гостиниц
+              в Седоне</p>
+            <a href="#" class="button search-button">Поиск гостиницы в Cедоне</a>
+        </section>
+      </main>
+      <footer class="page-footer" data-test="footer">
+        <section class="subscribe" data-test="subscribe">
+          <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
+          <p class="subscribe-subtitle">Только полезная информация и никакого спама, честное бойскаутское!</p>
+          <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
             <label class="visually-hidden" for="user-email">Укажите ваш e-mail</label>
-            <input class="subscribe-input" type="email" name="user-email" id="user-email" placeholder="Ваш e-mail" required>
-          </p>
-          <button class="button subscribe-button" type="submit">Подписаться</button>
-        </form>
-      </section>
-      <section class="socials">
-      <ul class="social-list">
-        <li class="social-item">
-          <a class="social-link" href="https://vk.com/htmlacademy">
-            <span class="visually-hidden">Мы во Вконтакте</span>
-          </a>
-        </li>
-        <li class="social-item">
-          <a class="social-link" href="https://t.me/htmlacademy">
-            <span class="visually-hidden">Мы в Телеграме</span>
-          </a>
-        </li>
-        <li class="social-item">
-          <a class="social-link" href="https://www.youtube.com/user/htmlacademyru">
-            <span class="visually-hidden">Мы в Youtube</span>
-          </a>
-        </li>
-      </ul>
-      </section>
-      <section class="contacts">
-      <a class="contacts-link" href="tel:+78128121212">+7 (812) 812-12-12</a>
-      </section>
-      <section class="copyright">
-      <a class="copyright-link" href="https://htmlacademy.ru/">
-        <img class="htmlacademy-logo" width="115" height="33" src="./images/logo-htmlacademy.svg"
-          alt="Логотип HTML Academy">
-      </a>
-      </section>
-    </footer>
+            <input class="subscribe-input" type="email" name="user-email" id="user-email" placeholder="Ваш e-mail"
+              required>
+            <button class="button subscribe-button" type="submit">Подписаться</button>
+          </form>
+        </section>
+        <div class="contacts-container">
+          <section class="socials">
+            <ul class="social-list">
+              <li class="social-item">
+                <a class="social-link" href="https://vk.com/htmlacademy">
+                  ВК<span class="visually-hidden">Мы во Вконтакте</span>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-link" href="https://t.me/htmlacademy">
+                  ТГ<span class="visually-hidden">Мы в Телеграме</span>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-link" href="https://www.youtube.com/user/htmlacademyru">
+                  ЮТ<span class="visually-hidden">Мы в Youtube</span>
+                </a>
+              </li>
+            </ul>
+          </section>
+          <section class="contacts">
+            <a class="contacts-link" href="tel:+78128121212">+7 (812) 812-12-12</a>
+          </section>
+          <section class="copyright">
+            <a class="copyright-link" href="https://htmlacademy.ru/">
+              <img class="htmlacademy-logo" width="115" height="33" src="./images/logo-htmlacademy.svg"
+                alt="Логотип HTML Academy">
+            </a>
+          </section>
+        </div>
+      </footer>
+    </div>
   </body>
 
 </html>
