--- a/catalog.html
+++ b/catalog.html
@@ -28,11 +28,21 @@
           <ul class="user-menu">
             <li class="user-menu-item">
               <a class="user-menu-link user-menu-search" href="#">
+                <svg class="user-menu-icon" aria-hidden="true" focusable="false" width="20" height="20"
+                  viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M19.5 18.0083L15.8 14.3287C16.8 13.0359 17.5 11.3453 17.5 9.4558C17.5 5.08011 13.9 1.5 9.5 1.5C5.1 1.5 1.5 5.17956 1.5 9.55525C1.5 13.9309 5.1 17.511 9.5 17.511C11.3 17.511 13 16.9144 14.4 15.8204L18.1 19.5L19.5 18.0083ZM9.5 15.5221C6.2 15.5221 3.5 12.837 3.5 9.55525C3.5 6.27348 6.2 3.5884 9.5 3.5884C12.8 3.5884 15.5 6.27348 15.5 9.55525C15.5 12.837 12.8 15.5221 9.5 15.5221Z" />
+                </svg>
                 <span class="visually-hidden">Поиск по сайту</span>
               </a>
             </li>
             <li class="user-menu-item user-menu-favorite">
               <a class="user-menu-link" href="#">
+                <svg class="user-menu-icon" aria-hidden="true" focusable="false" width="20" height="20"
+                  viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M9.9 19C9.6 19 9.3 18.9 9.1 18.6C3.7 12.5 2.4 11.1 2.1 10.7C1.4 9.8 1 8.6 1 7.4C1 4.4 3.4 2 6.5 2C7.8 2 9 2.5 10 3.3C11 2.5 12.3 2 13.5 2C16.5 2 19 4.4 19 7.4C19 8.7 18.5 9.9 17.7 10.8L10.7 18.7C10.5 18.9 10.3 19 9.9 19ZM3.9 9.5C4.2 9.9 7.4 13.5 10 16.4L16.2 9.4C16.7 8.9 16.9 8.2 16.9 7.4C16.9 5.6 15.4 4.1 13.6 4.1C12.6 4.1 11.6 4.6 10.9 5.4C10.6 5.7 10.3 5.8 10 5.8C9.7 5.8 9.4 5.6 9.2 5.4C8.5 4.6 7.5 4.1 6.5 4.1C4.7 4.1 3.2 5.6 3.2 7.4C3.1 8.3 3.5 9 3.9 9.5C3.8 9.5 3.8 9.5 3.9 9.5Z" />
+                </svg>
                 <span class="visually-hidden">Понравилось</span>
                 <span class="notification-badge">12</span>
               </a>
@@ -48,11 +58,16 @@
           <header class="header-inner">
             <h1 class="header-inner-title">Гостиницы Седоны</h1>
             <ul class="breadcrumbs">
-              <li class="breadcrums-item">
+              <li class=" breadcrumbs-item">
                 <span class="visually-hidden">Главная</span>
-                <a href="index.html" class="breadcrumbs-link">Главная</a>
+                <a href="index.html" class="breadcrumbs-link">
+                  <svg class="breadcrumbs-icon" aria-hidden="true" focusable="false" fill="currentColor" xmlns="http://www.w3.org/2000/svg" width="13" height="13" viewBox="0 0 13 13">
+                    <path d="m6.5.5-6 5.8v6.2h12V6.3L6.5.5Zm5 11h-10V6.7l5-4.8 5 4.8v4.8Z"></path>
+                    <path d="M4.5 10.5h1V8h2v2.5h1V7h-4v3.5Z"></path>
+                  </svg>
+                </a>
               </li>
-              <li class="breadcrums-item"><a href="" class="breadcrumbs-link breadcrumbs-link-current"
+              <li class=" breadcrumbs-item"><a href="" class="breadcrumbs-link breadcrumbs-link-current"
                   aria-current="page">Гостиницы</a></li>
             </ul>
           </header>
@@ -118,17 +133,17 @@
             </select>
             <ul class="view-list">
               <li class="view-item">
-                <a href="" class="view-link view-link-selected">
+                <a href="" class="view-link view-link-selected view-table" type="button">
                   <span class="visually-hidden">Показать результаты в таблице</span>
                 </a>
               </li>
               <li class="view-item">
-                <a href="" class="view-link">
+                <a href="" class="view-link view-big-icons" type="button">
                   <span class="visually-hidden">Показать результаты по одному</span>
                 </a>
               </li>
               <li class="view-item">
-                <a href="" class="view-link">
+                <a href="" class="view-link view-list-icons" type="button">
                   <span class="visually-hidden">Показать результаты списком</span>
                 </a>
               </li>
@@ -144,13 +159,13 @@
                 <h3 class="card-title">Amara Resort &amp; Spa</h3>
               </a>
               <p class="hotel-type">Гостиница</p>
-                <p class="hotel-price">От <span class="hotel-price-amount">4000</span> ₽</p>
-                  <a class="button card-button" href="#">подробнее</a>
-                  <button class="button favorite-button" type="submit">в избранное</button>
-                  <p class="hotel-rating four-stars">
-                    <span class="visually-hidden">Отель 4 звезды</span>
-                  </p>
-                  <p class="rating-number">Рейтинг: <span class="rating-score">8,5</span></p>
+              <p class="hotel-price">От <span class="hotel-price-amount">4000</span> ₽</p>
+              <a class="button card-button" href="#">подробнее</a>
+              <button class="button favorite-button" type="submit">в избранное</button>
+              <p class="hotel-rating four-stars">
+                <span class="visually-hidden">Отель 4 звезды</span>
+              </p>
+              <p class="rating-number">Рейтинг: <span class="rating-score">8,5</span></p>
             </li>
             <li class="hotel-list-item">
               <a href="#" class="card-link" tabindex="-1">
@@ -161,13 +176,13 @@
                 <h3 class="card-title">Villas at Poco Diablo</h3>
               </a>
               <p class="hotel-type">Гостиница</p>
-                <p class="hotel-price">От <span class="hotel-price-amount">5000</span> ₽</p>
-                  <a class="button card-button" href="#">подробнее</a>
-                  <button class="button favorite-button-selected" type="submit">в избранном</button>
-                  <p class="hotel-rating four-stars">
-                    <span class="visually-hidden">Отель 4 звезды</span>
-                  </p>
-                  <p class="rating-number">Рейтинг: <span class="rating-score">9,2</span></p>
+              <p class="hotel-price">От <span class="hotel-price-amount">5000</span> ₽</p>
+              <a class="button card-button" href="#">подробнее</a>
+              <button class="button favorite-button-selected" type="submit">в избранном</button>
+              <p class="hotel-rating four-stars">
+                <span class="visually-hidden">Отель 4 звезды</span>
+              </p>
+              <p class="rating-number">Рейтинг: <span class="rating-score">9,2</span></p>
             </li>
             <li class="hotel-list-item">
               <a href="#" class="card-link" tabindex="-1">
@@ -178,13 +193,13 @@
                 <h3 class="card-title">Desert Quail Inn</h3>
               </a>
               <p class="hotel-type">Гостиница</p>
-                <p class="hotel-price">От <span class="hotel-price-amount">2500</span> ₽</p>
-                  <a class="button card-button" href="#">подробнее</a>
-                  <button class="button favorite-button" type="submit">в избранное</button>
-                  <p class="hotel-rating three-stars">
-                    <span class="visually-hidden">Отель 3 звезды</span>
-                  </p>
-                  <p class="rating-number">Рейтинг: <span class="rating-score">6,9</span></p>
+              <p class="hotel-price">От <span class="hotel-price-amount">2500</span> ₽</p>
+              <a class="button card-button" href="#">подробнее</a>
+              <button class="button favorite-button" type="submit">в избранное</button>
+              <p class="hotel-rating three-stars">
+                <span class="visually-hidden">Отель 3 звезды</span>
+              </p>
+              <p class="rating-number">Рейтинг: <span class="rating-score">6,9</span></p>
             </li>
             <li class="hotel-list-item">
               <a href="#" class="card-link" tabindex="-1">
@@ -195,13 +210,13 @@
                 <h3 class="card-title">GreenTree Inn</h3>
               </a>
               <p class="hotel-type">Гостиница</p>
-                <p class="hotel-price">От <span class="hotel-price-amount">1500</span> ₽</p>
-                  <a class="button card-button" href="#">подробнее</a>
-                  <button class="button favorite-button" type="submit">в избранное</button>
-                  <p class="hotel-rating two-stars">
-                    <span class="visually-hidden">Отель 2 звезды</span>
-                  </p>
-                  <p class="rating-number">Рейтинг: <span class="rating-score">5,0</span></p>
+              <p class="hotel-price">От <span class="hotel-price-amount">1500</span> ₽</p>
+              <a class="button card-button" href="#">подробнее</a>
+              <button class="button favorite-button" type="submit">в избранное</button>
+              <p class="hotel-rating two-stars">
+                <span class="visually-hidden">Отель 2 звезды</span>
+              </p>
+              <p class="rating-number">Рейтинг: <span class="rating-score">5,0</span></p>
             </li>
           </ul>
           <ul class="pagination">
@@ -245,17 +260,32 @@
             <ul class="social-list">
               <li class="social-item">
                 <a class="social-link" href="https://vk.com/htmlacademy">
-                  ВК<span class="visually-hidden">Мы во Вконтакте</span>
+                  <svg class="social-icon" aria-hidden="true" focusable="false" width="25" height="15"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                      d="M24.116 1.804c.166-.546 0-.948-.795-.948h-2.625c-.668 0-.976.347-1.143.73 0 0-1.335 3.196-3.226 5.272-.612.602-.89.793-1.224.793-.167 0-.418-.19-.418-.738V1.804c0-.656-.184-.948-.74-.948H9.817c-.417 0-.668.304-.668.593 0 .621.946.765 1.043 2.513V7.76c0 .833-.153.984-.487.984-.89 0-3.055-3.21-4.34-6.885-.249-.715-.5-1.003-1.172-1.003H1.566c-.75 0-.9.347-.9.73 0 .682.89 4.07 4.145 8.551 2.17 3.06 5.225 4.72 8.008 4.72 1.67 0 1.875-.369 1.875-1.004V11.54c0-.737.158-.884.687-.884.39 0 1.057.192 2.615 1.667 1.78 1.75 2.073 2.533 3.075 2.533h2.625c.75 0 1.126-.368.91-1.096-.238-.724-1.088-1.775-2.215-3.022-.612-.71-1.53-1.475-1.809-1.858-.389-.49-.278-.71 0-1.147 0 0 3.2-4.426 3.533-5.929h.001Z" />
+                  </svg>
+                  <span class="visually-hidden">Мы во Вконтакте</span>
                 </a>
               </li>
               <li class="social-item">
                 <a class="social-link" href="https://t.me/htmlacademy">
-                  ТГ<span class="visually-hidden">Мы в Телеграме</span>
+                  <svg class="social-icon" aria-hidden="true" focusable="false" width="18" height="16"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path
+                      d="M16.785.956.84 7.104C-.248 7.541-.24 8.148.64 8.42l4.094 1.277 9.472-5.976c.448-.272.857-.126.52.173l-7.673 6.925H7.05l.002.001-.283 4.22c.414 0 .597-.19.829-.414l1.988-1.934 4.136 3.055c.762.42 1.31.205 1.5-.706l2.715-12.795c.278-1.114-.425-1.618-1.153-1.29Z" />
+                  </svg>
+                  <span class="visually-hidden">Мы в Телеграме</span>
                 </a>
               </li>
               <li class="social-item">
                 <a class="social-link" href="https://www.youtube.com/user/htmlacademyru">
-                  ЮТ<span class="visually-hidden">Мы в Youtube</span>
+                  <svg class="social-icon" aria-hidden="true" focusable="false" width="23" height="18"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path
+                      d="M18.94.356H3.507C1.647.356.333 1.95.333 3.756V13.85c0 1.913 1.314 3.506 3.174 3.506H19.16c1.642 0 3.174-1.593 3.174-3.4v-10.2c-.219-1.806-1.532-3.4-3.393-3.4ZM7.995 12.894V4.819l7.333 4.037-7.333 4.038Z" />
+                  </svg>
+                  <span class="visually-hidden">Мы в Youtube</span>
                 </a>
               </li>
             </ul>
@@ -265,8 +295,13 @@
           </section>
           <section class="copyright">
             <a class="copyright-link" href="https://htmlacademy.ru/">
-              <img class="htmlacademy-logo" width="115" height="33" src="./images/logo-htmlacademy.svg"
-                alt="Логотип HTML Academy">
+              <svg class="htmlacademy-logo" role="img" aria-label="Логотип компании-разработчика HTML-Academy"
+                aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="115"
+                height="34" viewBox="0 0 115 34">
+                <path
+                  d="M0 13.26v2.6h2.5v-2.6H0ZM11.6 4.86c-1.6 0-2.8.7-3.6 1.7h-.1V.36h-2v15.5h2v-5.3c0-2.1 1.3-3.6 3.3-3.6 1.8 0 2.9 1.4 2.9 3.2v5.7h2v-6.1c.1-3-1.8-4.9-4.5-4.9ZM26.6 5.16h-4.8v-3.7h-2v3.8h-1.9v2h1.9v6c0 1.7 1 2.7 2.7 2.7h4.1v-2h-3.7c-.7 0-1.1-.4-1.1-1.1v-5.7h4.8v-2ZM41.1 4.96c-1.6 0-2.9.8-3.5 2.1h-.1c-.6-1.2-1.8-2.1-3.4-2.1-1.4 0-2.5.8-3.1 1.8h-.1v-1.6H29v10.6h2v-5.4c0-2 1-3.5 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.5-1.4-4.3-3.9-4.3ZM47.8 13.06c0 1.7 1 2.7 2.8 2.7h2v-2h-1.7c-.7 0-1.1-.4-1.1-1.1V.36h-2v12.7ZM28.9 20.06c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2v-10.6h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.4 3.6-3.6 3.6ZM44.2 22.36c-.5-2.4-2.6-4.1-5.4-4.1a5.4 5.4 0 0 0-5.6 5.6c0 3.1 2.2 5.6 5.6 5.6 2.8 0 4.9-1.8 5.4-4.2h-2.1a3.4 3.4 0 0 1-3.3 2.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6c1.6 0 2.8 1 3.3 2.2h2.1v-.2ZM55.1 20.06c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2v-10.6h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.5 3.6-3.6 3.6ZM68.7 20.16c-.9-1.1-2.2-1.9-3.9-1.9-3.1 0-5.4 2.3-5.4 5.6s2.2 5.6 5.4 5.6c1.7 0 3-.8 3.8-1.8h.1v1.5h2v-15.4h-2v6.4Zm-3.6 7.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c-.1 2-1.5 3.6-3.6 3.6ZM78.3 18.26c-3.3 0-5.5 2.5-5.5 5.6 0 3 2.1 5.6 5.5 5.6 2.5 0 4.5-1.3 5.2-3.6h-2.1c-.5 1-1.6 1.6-3 1.6-1.9 0-3.3-1.3-3.4-2.9h8.8c.2-3.6-2-6.3-5.5-6.3Zm0 1.9c1.7 0 3 1 3.3 2.6h-6.5c.3-1.5 1.5-2.6 3.2-2.6ZM98.2 18.26c-1.6 0-2.9.8-3.6 2h-.1c-.6-1.2-1.8-2-3.4-2-1.4 0-2.5.7-3.1 1.8v-1.5h-1.9v10.6h2v-5.4c0-2 1-3.4 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.6-1.4-4.4-3.9-4.4ZM109.4 27.36l-3.6-8.9h-2.2l4.8 11.6c-.3.9-.7 1.2-1.7 1.2h-2.5v2h2.5c1.8 0 2.8-.8 3.5-2.6l4.7-12.2h-2.1l-3.4 8.9Z">
+                </path>
+              </svg>
             </a>
           </section>
         </div>
